# game-bot

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  TODO.txt  config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
app/: config.py  login.py  main.py  scan.py
app/core/: bot.py
app/driver_adapter/: builder.py  driver.py  pause.py
app/model/: Account.py  Village.py
app/scan_adapter/: scanner.py
docs/: ECONOMY_PLANNING.md
src/: config.py  main.py
src/config/: config.py
src/core/: bot.py  building_queue.py  driver.py  driver_protocol.py  html_cache.py  job.py  logging_config.py  logic_engine.py  task.py  tasks.py
src/domain/: bot.py  config.py  html_cache.py
src/driver_adapter/: driver.py
src/infrastructure/: config_loader.py
src/scan_adapter/: scanner.py  scanner_adapter.py
tests/: conftest.py  test_scanner.py  test_temp.py
tests/core/: test_allocate_attributes_task.py  test_bot_unfreeze.py  test_build_new_task.py  test_build_task.py  test_building_queue.py  test_collect_daily_quests_job.py  test_collect_daily_quests_task.py  test_collect_questmaster_task.py  test_economy_planning.py  test_found_new_village_job.py  test_found_new_village_strategy.py  test_hero_adventure_task.py  test_logic_engine.py  test_logic_engine_def_policy.py  test_logic_engine_delayed.py  test_romans_parallel_building.py  test_scan_troops.py  test_send_request_heroinfo.py  test_troop_training.py
tests/driver_adapter/: test_parse_tile.py
tests/scanner_adapter/: _backup_dorf1.html  _backup_dorf2.html  dorf1.html  dorf2.html  hero_attributes.html  html_utils.py  (+10 more)
(+64 files in other folders)
