[tool.poetry]
name = "game-bot"
version = "0.1.0"
description = ""
authors = ["marek.borecki <marek.borecki@fasolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
playwright = "^1.57.0"
pyyaml = "^6.0.3"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
