[tool.poetry]
name = "game-bot"
version = "0.1.0"
description = ""
authors = ["marek.borecki <marekborecki88>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
game-bot = "src.main:main"

[tool.poetry.dependencies]
python = "^3.14"
playwright = "^1.57.0"
pyyaml = "^6.0.3"
python-dotenv = "^1.2.1"
playwright-stealth = "^2.0.0"
beautifulsoup4 = "^4.14.3"
pytest = "^9.0.2"
schedule = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

